# jammate

./: pyproject.toml
jammate/: README.md  pyproject.toml
jammate/src/: main.py  paths.py  router.py
jammate/src/pages/: not_found.py
jammate/src/pages/bands/: page.py
jammate/src/pages/home/: page.py
