[project]
name = "jammate"
version = "0.1.0"
description = ""
authors = [
    {name = "s-anzai",email = "s-anzai@wwwave.jp"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
name = "jammate"
version = "0.1.0"
description = ""
authors = [
    "s-anzai <s-anzai@wwwave.jp>"
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "^0.27.4"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
